--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -71,6 +71,11 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name=".fpsinfo.FPSInfoService"
+            android:exported="false">
+        </service>
+
         <activity
             android:name=".doze.DozeSettingsActivity"
             android:label="@string/ambient_display_title"
