raphael: Adjust dex2oat thread count after setup wizard
Test: Forrest appinstall test
Bug: 149395059
Change-Id: I9c5db865c616480b0f00629aba54e02b97bc4674
Signed-off-by: Akash Srivastava <akashniki@gmail.com>
Signed-off-by: Sherif Rahim <sherifrahim2001@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -359,3 +359,7 @@ service vendor.power-hal /vendor/bin/hw/android.hardware.power-service-qti
 on charger
     setprop persist.sys.usb.config mass_storage
     start vendor.qcom-post-boot
+
+on property:persist.sys.device_provisioned=1
+    setprop dalvik.vm.dex2oat-cpu-set 0,1,2,3,4,5,6
+    setprop dalvik.vm.dex2oat-threads 6
