--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -116,13 +116,13 @@
             </intent-filter>
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.system" />
+                android:value="com.android.settings.category.ia.battery" />
             <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/thermal_summary" />
             <meta-data
                 android:name="com.android.settings.order"
-                android:value="-253" />
+                android:value="1" />
         </activity>
         <service
             android:name=".thermal.ThermalService"
@@ -154,13 +154,13 @@
 
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.system" />
+                android:value="com.android.settings.category.ia.display" />
             <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/display_settings_summary" />
             <meta-data
                 android:name="com.android.settings.order"
-                android:value="-252" />
+                android:value="-10" />
         </activity>
         
     </application>
